@@ -8,19 +8,9 @@ import org.mockito.ArgumentCaptor;
 import org.mockito.Captor;
 import org.mockito.InjectMocks;
 import org.mockito.Mock;
-
-import static org.mockito.Mockito.times;
-import static org.mockito.Mockito.verify;
-import static org.mockito.Mockito.when;
-import static org.mockito.Mockito.any;
 import org.mockito.junit.jupiter.MockitoExtension;
-import org.springframework.beans.factory.annotation.Value;
-import org.springframework.boot.test.context.SpringBootTest;
 import org.springframework.http.ResponseEntity;
-import org.springframework.test.context.ContextConfiguration;
-import org.springframework.test.context.TestPropertySource;
 import org.springframework.test.util.ReflectionTestUtils;
-import school.faang.user_service.UserServiceApplication;
 import school.faang.user_service.client.DefaultAvatarClient;
 import school.faang.user_service.entity.User;
 import school.faang.user_service.entity.UserProfilePic;
@@ -30,10 +20,15 @@ import school.faang.user_service.service.s3.S3Service;
 
 import java.util.Optional;
 
+import static org.mockito.Mockito.any;
+import static org.mockito.Mockito.times;
+import static org.mockito.Mockito.verify;
+import static org.mockito.Mockito.when;
+
 @ExtendWith(MockitoExtension.class)
 public class AvatarServiceTest {
     private String prefixFileName = "default_avatar_for_user_";
-    
+
     @InjectMocks
     private AvatarService service;
     @Mock
@@ -52,7 +47,8 @@ public class AvatarServiceTest {
         when(userRepository.findById(userId)).thenReturn(Optional.empty());
 
         // Act & Assert
-        Exception exception = Assertions.assertThrows(DataValidationException.class,() -> service.createDefaultAvatarForUser(userId));
+        Exception exception = Assertions.assertThrows(DataValidationException.class,
+                () -> service.createDefaultAvatarForUser(userId));
         Assertions.assertEquals(exception.getMessage(), String.format("User with id = %d has not in system", userId));
     }
 
@@ -64,8 +60,9 @@ public class AvatarServiceTest {
         when(userRepository.findById(userId)).thenReturn(Optional.of(user));
 
         // Act & Assert
-        Exception exception = Assertions.assertThrows(DataValidationException.class,() -> service.createDefaultAvatarForUser(userId));
-        Assertions.assertEquals(String.format("User with id = %d already has an avatar", userId), exception.getMessage());
+        Exception exception = Assertions.assertThrows(DataValidationException.class,
+                () -> service.createDefaultAvatarForUser(userId));
+        Assertions.assertEquals("User with id = %d already has an avatar".formatted(userId), exception.getMessage());
     }
 
     @Test
@@ -76,7 +73,6 @@ public class AvatarServiceTest {
         byte[] file = {1, 2, 3};
         ResponseEntity<byte[]> fileResponse = ResponseEntity.of(Optional.of(file));
         when(defaultAvatarClient.getAvatar(any(), any(), any())).thenReturn(fileResponse);
-        String key = prefixFileName + userId + "_";
         ReflectionTestUtils.setField(service, "prefixFileName", prefixFileName);
 
         // Act and Assert
@@ -87,6 +83,7 @@ public class AvatarServiceTest {
         filedId = filedId.substring(0, StringUtils.ordinalIndexOf(filedId, "_", 5) + 1);
         String smallFileId = userPic.getSmallFileId();
         smallFileId = smallFileId.substring(0, StringUtils.ordinalIndexOf(smallFileId, "_", 5) + 1);
+        String key = prefixFileName + userId + "_";
         Assertions.assertEquals(key, filedId);
         Assertions.assertEquals(key, smallFileId);
     }
